<resources xmlns:https="http://schemas.android.com/tools">
    <string name="app_name">魔物獵人世界筆記</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="service_mail_address">service@ycstudio.com.tw</string>

    <string name="about_application">關於這個App</string>
    <string name="about_application_content">該應用程式為iOS魔物獵人筆記App的Android版本，資料來自於iOS版的資料庫。\n\n作者 : Deathhit\n iOS版作者 : BensonLin\n\n
        <a href="https://itunes.apple.com/tw/app/%E9%AD%94%E7%89%A9%E7%8D%B5%E4%BA%BA%E7%AD%86%E8%A8%98-%E4%B8%96%E7%95%8C/id1344517254?mt=8">點擊前往iOS版App頁面</a></string>
    <string name="advanced">進階</string>
    <string name="alchemy_only">鍊金術限定</string>
    <string name="all_materials">所有素材</string>
    <string name="all_skills">所有技能</string>
    <string name="big_creatures">大型生物</string>
    <string name="calculator">配裝</string>
    <string name="cancel">取消</string>
    <string name="close_ad">關閉廣告</string>
    <string name="condition">條件</string>
    <string name="configuration">配置</string>
    <string name="custom">自訂</string>
    <string name="dragon">龍</string>
    <string name="defence">防</string>
    <string name="ecological_notes">生態筆記</string>
    <string name="enter">確認</string>
    <string name="environment_creatures">環境生物</string>
    <string name="equipment">裝備</string>
    <string name="fire">火</string>
    <string name="guard_stone">護石</string>
    <string name="ice">冰</string>
    <string name="infested_area">出沒區域</string>
    <string name="jewel">寶珠</string>
    <string name="level">等級</string>
    <string name="level_effect">等級效果</string>
    <string name="loading">資料讀取中，請稍候。</string>
    <string name="material">素材</string>
    <string name="monster">魔物</string>
    <string name="name">名稱</string>
    <string name="no">否</string>
    <string name="note_weapon_slots_not_included">備註 : 武器洞數未列入計算</string>
    <string name="not_equipped">---未裝備---</string>
    <string name="no_internet">未偵測到網路，請開啟網路後重試。</string>
    <string name="piece">件</string>
    <string name="position">部位</string>
    <string name="position_arms">手部</string>
    <string name="position_body">身體</string>
    <string name="position_head">頭部</string>
    <string name="position_legs">腿部</string>
    <string name="position_waist">腰部</string>
    <string name="position_information">部位資訊</string>
    <string name="price">價格</string>
    <string name="primary">初階</string>
    <string name="rarity">稀有度</string>
    <string name="report_missing_data">回報遺失資料</string>
    <string name="report_missing_data_content">請寫下資料缺失的頁面及所缺少的資料，感謝您的協助。</string>
    <string name="required_materials">所需素材</string>
    <string name="sample_text">文字</string>
    <string name="save">儲存</string>
    <string name="search_calculator">搜尋配裝</string>
    <string name="search_equipment_guard_stone_jewel">搜尋裝備、護石、寶珠</string>
    <string name="search_material">搜尋素材</string>
    <string name="search_monster">搜尋魔物</string>
    <string name="search_skill">搜尋技能</string>
    <string name="series">系列</string>
    <string name="series_skill">系列技能</string>
    <string name="skill">技能</string>
    <string name="skill_effect">技能效果</string>
    <string name="slot">洞</string>
    <string name="small_creatures">小型生物</string>
    <string name="thunder">雷</string>
    <string name="tip">提示 : 第一次開啟或是情報更新都需要下載資料，導致較長的讀取時間。</string>
    <string name="upgrade_information">升級資訊</string>
    <string name="water">水</string>
    <string name="weapon">武器</string>
    <string name="yes">是</string>
</resources>
