<?xml version="1.0" encoding="utf-8"?>
<tw.com.deathhit.mhw_note.utility.widget.FixedAspectFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layoutHeightRatio="@integer/tab_bar_height_ratio"
    app:layoutWidthRatio="@integer/tab_bar_width_ratio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fire"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/water"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thunder"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ice"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dragon"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</tw.com.deathhit.mhw_note.utility.widget.FixedAspectFrameLayout>